// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /import csv positive should return created evaka areas 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "id": "6529e31e-9777-11eb-ba88-33a923255570",
        "name": "Etelä",
        "short_name": "etela",
      },
      Object {
        "id": "6529f5a2-9777-11eb-ba89-cfcda122ed3b",
        "name": "Itä",
        "short_name": "ita",
      },
      Object {
        "id": "6529f6ce-9777-11eb-ba8a-8f6495ec5104",
        "name": "Länsi",
        "short_name": "lansi",
      },
    ],
  ],
  "tables": Array [
    "evaka_areas",
  ],
}
`;

exports[`GET /import csv positive should return created unitmaps 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "effica_id": 123,
        "evaka_id": "8eb2ca00-d40f-11eb-b97b-5b7a72ae2099",
      },
      Object {
        "effica_id": 125,
        "evaka_id": "8eb2caf0-d40f-11eb-b97b-5f3e4474ff3b",
      },
    ],
  ],
  "tables": Array [
    "unitmap",
  ],
}
`;

exports[`GET /import xml positive should return created application rows 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "areacode": "4010401",
        "childminder": null,
        "childmindercare": "0",
        "days": 0,
        "extent": 999340002,
        "guid": "52F59481-5533-49E4-8D9F-85E6E180B768",
        "hours": "0",
        "personid": "010114A975H",
        "priority": 1,
        "startdate": "2021-09-01T00:00:00.000Z",
        "type": "BOA",
        "unitcare": 0,
        "unitcode": 7,
      },
    ],
  ],
  "tables": Array [
    "applicationrows",
  ],
}
`;

exports[`GET /import xml positive should return created applications 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "applicationdate": "2021-08-01T00:00:00.000Z",
        "guid": "12F28AA0-E059-4203-98F9-EE3D37738B99",
        "personid": "010114A975H",
        "placeneed": "1",
        "specialhandlingtime": "0",
        "transferapplication": false,
      },
    ],
  ],
  "tables": Array [
    "applications",
  ],
}
`;

exports[`GET /import xml positive should return created childminders 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "area": 1,
        "email": "nomail@forme.fake",
        "enddate": null,
        "personid": "010101-TP99",
        "phonenbr": "11223344",
        "startdate": Any<String>,
      },
    ],
  ],
  "tables": Array [
    "childminders",
  ],
}
`;

exports[`GET /import xml positive should return created codes 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "active": true,
        "code": 1,
        "codetype": "SPRAK",
        "extrainfo1": "fi",
        "extrainfo2": null,
        "text": "Suomi¤¤Finska",
      },
      Object {
        "active": true,
        "code": 2,
        "codetype": "HEMKOMMUN",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Ypäjä",
      },
      Object {
        "active": true,
        "code": 3,
        "codetype": "LAND",
        "extrainfo1": "FI",
        "extrainfo2": "246",
        "text": "Suomi",
      },
      Object {
        "active": true,
        "code": 26,
        "codetype": "INKSLAG",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Lisätulo¤¤Inkomstslag1",
      },
      Object {
        "active": true,
        "code": 25,
        "codetype": "INKSLAG",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Päätulo¤¤Inkomstslag2",
      },
      Object {
        "active": true,
        "code": 30,
        "codetype": "INKPERIOD",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Kuukausitulo¤¤Inkomstperiod1",
      },
      Object {
        "active": true,
        "code": 100,
        "codetype": "OMFATTNING",
        "extrainfo1": "1,25.01",
        "extrainfo2": null,
        "text": "Kokopäivähoito¤¤Heldagsomsorg 5-7t/d",
      },
      Object {
        "active": true,
        "code": 101,
        "codetype": "OMFATTNING",
        "extrainfo1": "2,10.01",
        "extrainfo2": null,
        "text": "Osapäivähoito enintään 5 h/pv¤¤Halvdagsomsorg &lt; 5 t/d",
      },
      Object {
        "active": true,
        "code": 999420001,
        "codetype": "STATUS",
        "extrainfo1": "OK",
        "extrainfo2": null,
        "text": "Hyväksytty¤¤OK",
      },
    ],
  ],
  "tables": Array [
    "codes",
  ],
}
`;

exports[`GET /import xml positive should return created decisions 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "caseworker": "FAKE",
        "days": 0,
        "decisionchildminder": null,
        "decisiondate": Any<String>,
        "decisionmaker": null,
        "decisionnbr": 1,
        "decisionstatus": 999420001,
        "decisiontype": 426,
        "decisionunitcode": 123,
        "enddate": null,
        "extent": null,
        "grandtotal": "10",
        "paydecision": "1",
        "personid": "010619A9501",
        "startdate": Any<String>,
        "sum": "10",
        "totalsum": "10",
      },
    ],
  ],
  "tables": Array [
    "decisions",
  ],
}
`;

exports[`GET /import xml positive should return created departments 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "departmentaddress": "Testikuja 123",
        "departmentcity": "Tenhola",
        "departmentcode": 1231,
        "departmentemail": "eij@imaginary.fake",
        "departmentname": "Tenhon terhot",
        "departmentzipcode": "12000",
        "enddate": null,
        "phone": "1234567",
        "startdate": Any<String>,
        "unitcode": 123,
      },
      Object {
        "departmentaddress": "Testaajankatu 321",
        "departmentcity": "Pajuoja",
        "departmentcode": 1251,
        "departmentemail": "eij@imaginary.fake",
        "departmentname": "Tujun tupajumit",
        "departmentzipcode": "13000",
        "enddate": null,
        "phone": "1234567",
        "startdate": Any<String>,
        "unitcode": 125,
      },
    ],
  ],
  "tables": Array [
    "departments",
  ],
}
`;

exports[`GET /import xml positive should return created families 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "enddate": Any<String>,
        "familynbr": 1,
        "personid": "020967-9992",
        "roleinfamily": "R",
        "startdate": Any<String>,
      },
      Object {
        "enddate": Any<String>,
        "familynbr": 1,
        "personid": "180476-998M",
        "roleinfamily": "S",
        "startdate": Any<String>,
      },
      Object {
        "enddate": Any<String>,
        "familynbr": 1,
        "personid": "251118A9509",
        "roleinfamily": "B",
        "startdate": Any<String>,
      },
      Object {
        "enddate": null,
        "familynbr": 2,
        "personid": "020967-9992",
        "roleinfamily": "R",
        "startdate": Any<String>,
      },
      Object {
        "enddate": null,
        "familynbr": 2,
        "personid": "180476-998M",
        "roleinfamily": "S",
        "startdate": Any<String>,
      },
      Object {
        "enddate": null,
        "familynbr": 2,
        "personid": "251118A9509",
        "roleinfamily": "B",
        "startdate": Any<String>,
      },
      Object {
        "enddate": null,
        "familynbr": 2,
        "personid": "010619A9501",
        "roleinfamily": "B",
        "startdate": Any<String>,
      },
    ],
  ],
  "tables": Array [
    "families",
  ],
}
`;

exports[`GET /import xml positive should return created feedeviations 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "days": 0,
        "deviationtype": 4,
        "enddate": null,
        "extentcode": 100,
        "hours": "0",
        "placementnbr": 11,
        "procent": "0",
        "rownbr": 1,
        "serviceform": 3,
        "startdate": Any<String>,
        "sum": "0",
      },
      Object {
        "days": 0,
        "deviationtype": 4,
        "enddate": null,
        "extentcode": 101,
        "hours": "0",
        "placementnbr": 12,
        "procent": "0",
        "rownbr": 2,
        "serviceform": 3,
        "startdate": Any<String>,
        "sum": "10",
      },
    ],
  ],
  "tables": Array [
    "feedeviations",
  ],
}
`;

exports[`GET /import xml positive should return created income  1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "enddate": Any<String>,
        "incomemissing": false,
        "maxincome": false,
        "personid": "180476-998M",
        "startdate": Any<String>,
        "summa": "50000",
      },
      Object {
        "enddate": null,
        "incomemissing": false,
        "maxincome": false,
        "personid": "020967-9992",
        "startdate": Any<String>,
        "summa": "5060.6",
      },
    ],
  ],
  "tables": Array [
    "income",
  ],
}
`;

exports[`GET /import xml positive should return created incomerows 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "enddate": null,
        "incomeperiod": 30,
        "incometype": 25,
        "personid": "020967-9992",
        "startdate": Any<String>,
        "summa": "4500.6",
      },
      Object {
        "enddate": Any<String>,
        "incomeperiod": 30,
        "incometype": 26,
        "personid": "020967-9992",
        "startdate": Any<String>,
        "summa": "560",
      },
    ],
  ],
  "tables": Array [
    "incomerows",
  ],
}
`;

exports[`GET /import xml positive should return created persons 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa}",
        "homemunicipality": 2,
        "mothertongue": 1,
        "nationality": 3,
        "personcity": "Ypäjä",
        "personhomeemail": "fake@notmaildomain.notext",
        "personid": "020967-9992",
        "personmobilephone": "000-0000000",
        "personname": "Authentic, Aimo",
        "personstreetaddress": "Fakestreet 123",
        "personzipcode": "1",
        "secretaddress": false,
      },
      Object {
        "guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa}",
        "homemunicipality": 2,
        "mothertongue": 1,
        "nationality": null,
        "personcity": "Ypäjä",
        "personhomeemail": "fake2@notmaildomain.notext",
        "personid": "020288-TP01",
        "personmobilephone": "111-1111111",
        "personname": "Temporary, Teppo",
        "personstreetaddress": "StreetStreet 321",
        "personzipcode": "2",
        "secretaddress": false,
      },
      Object {
        "guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa}",
        "homemunicipality": 2,
        "mothertongue": 1,
        "nationality": 3,
        "personcity": "Ypäjä",
        "personhomeemail": "fake3@notmaildomain.notext",
        "personid": "180476-998M",
        "personmobilephone": "222-2222222",
        "personname": "Hidden, Hilda",
        "personstreetaddress": "HideStreet 2",
        "personzipcode": "1",
        "secretaddress": true,
      },
      Object {
        "guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa}",
        "homemunicipality": 2,
        "mothertongue": 1,
        "nationality": 3,
        "personcity": "Ypäjä",
        "personhomeemail": "fake3@notmaildomain.notext",
        "personid": "010619A9501",
        "personmobilephone": "222-2222222",
        "personname": "Child, Christian",
        "personstreetaddress": "HideStreet 2",
        "personzipcode": "1",
        "secretaddress": false,
      },
      Object {
        "guid": "{AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaa}",
        "homemunicipality": 2,
        "mothertongue": 1,
        "nationality": 3,
        "personcity": "Tenhola",
        "personhomeemail": "fake3@notmaildomain.notext",
        "personid": "251118A9509",
        "personmobilephone": "222-2222222",
        "personname": "Child, Camilla",
        "personstreetaddress": "HideStreet 2",
        "personzipcode": "12000",
        "secretaddress": false,
      },
    ],
  ],
  "tables": Array [
    "person",
  ],
}
`;

exports[`GET /import xml positive should return created placementextents 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "days": 0,
        "enddate": null,
        "extentcode": 100,
        "extentnbr": 1,
        "hours": "0",
        "placementnbr": 11,
        "startdate": Any<String>,
      },
      Object {
        "days": 15,
        "enddate": null,
        "extentcode": 101,
        "extentnbr": 2,
        "hours": "0",
        "placementnbr": 12,
        "startdate": Any<String>,
      },
    ],
  ],
  "tables": Array [
    "placementextents",
  ],
}
`;

exports[`GET /import xml positive should return created placements 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "enddate": null,
        "personid": "010619A9501",
        "placementchildminder": null,
        "placementdepartmentcode": 1231,
        "placementnbr": 11,
        "placementunitcode": 123,
        "startdate": Any<String>,
      },
      Object {
        "enddate": null,
        "personid": "251118A9509",
        "placementchildminder": null,
        "placementdepartmentcode": 1251,
        "placementnbr": 12,
        "placementunitcode": 125,
        "startdate": Any<String>,
      },
    ],
  ],
  "tables": Array [
    "placements",
  ],
}
`;

exports[`GET /import xml positive should return created units 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "areacode": 1,
        "enddate": null,
        "phone1": "3123312",
        "startdate": Any<String>,
        "unit24_7": false,
        "unitaddress": "Testikuja 123",
        "unitcity": "Tenhola",
        "unitcode": 123,
        "unitemail": "notreal@imaginary.fake",
        "unitname": "Tenhon testiyksikkö",
        "unitzipcode": "12000",
      },
      Object {
        "areacode": 2,
        "enddate": null,
        "phone1": "12123123",
        "startdate": Any<String>,
        "unit24_7": true,
        "unitaddress": "Testaajankatu 321",
        "unitcity": "Pajuoja",
        "unitcode": 125,
        "unitemail": "notreal@imaginary.fake",
        "unitname": "Pujakan testiyksikkö",
        "unitzipcode": "13000",
      },
    ],
  ],
  "tables": Array [
    "units",
  ],
}
`;

exports[`GET /import xml positive should work even if XML elements have mixed case 1`] = `
Object {
  "inserts": Array [
    Array [
      Object {
        "active": true,
        "code": 1,
        "codetype": "SPRAK",
        "extrainfo1": "fi",
        "extrainfo2": null,
        "text": "Suomi¤¤Finska",
      },
      Object {
        "active": true,
        "code": 2,
        "codetype": "HEMKOMMUN",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Ypäjä",
      },
      Object {
        "active": true,
        "code": 3,
        "codetype": "LAND",
        "extrainfo1": "FI",
        "extrainfo2": "246",
        "text": "Suomi",
      },
      Object {
        "active": true,
        "code": 26,
        "codetype": "INKSLAG",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Lisätulo¤¤Inkomstslag1",
      },
      Object {
        "active": true,
        "code": 25,
        "codetype": "INKSLAG",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Päätulo¤¤Inkomstslag2",
      },
      Object {
        "active": true,
        "code": 30,
        "codetype": "INKPERIOD",
        "extrainfo1": null,
        "extrainfo2": null,
        "text": "Kuukausitulo¤¤Inkomstperiod1",
      },
    ],
  ],
  "tables": Array [
    "codes",
  ],
}
`;
